# Lab8_Model_Epidemiologiczny

./: model.ipynb  model_wizualizacja.ipynb  pyproject.toml  test.py
